Closed Bug 1768956 Opened 4 years ago Closed 4 years ago

DataPipe's AsyncWait methods don't support canceling

Categories

(Core :: IPC, defect)

defect

Tracking

()

RESOLVED FIXED
102 Branch
Tracking Status
firefox102 --- fixed

People

(Reporter: nika, Assigned: nika)

References

Details

Attachments

(1 file)

I don't know how I missed it, but apparently I forgot to support canceling AsyncWait callbacks in DataPipe.

Pushed by nlayzell@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/5ddee56f6f5b Allow canceling AsyncWait callbacks in DataPipe, r=xpcom-reviewers,mccr8
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 102 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: