Bug 1768956 - Allow canceling AsyncWait callbacks in DataPipe, r=xpcom-reviewers,mccr8

Differential Revision: https://phabricator.services.mozilla.com/D146129